# Deepeye-Metadata

./: .gitignore  README.md  pyproject.toml
NL2SQL-Bugs/: gpt_4o_mini_damo_wo_memory_results_on_train_set.json  qwen3-coder-30b-a3b_incorrect.json
__MACOSX/app/: ._db_utils
app/config/: config.py
app/dataset/: dataset.py
app/db_utils/: schema.py
app/logger/: logger.py
app/prompt/: factory.py  prompt_template.py
caf/: __init__.py  exceptions.py  system.py
caf/config/: __init__.py  global_config.py  loader.py  paths.py
caf/llm/: __init__.py  client.py  providers.py  sql_generator.py
caf/memory/: __init__.py  base.py  exceptions.py  file_manager.py  types.py  types_per_term.py
caf/preprocess/: __init__.py  sql_preprocessor.py
caf/prompt/: __init__.py  factory.py
caf/prompts/: __init__.py  dependency_parsing.py  metadata_generation.py  query_analysis.py  schema_matching.py  verification.py  (+2 more)
config/: caf_config.yaml
damo/: __init__.py  config.py  data_handler.py  evaluation.py  main.py  recalculate_ex_acc.py  run_damo_w_memory.sh
docs/: fix_empty_value_priority_issue.md  fix_execution_order_issue.md  metadata_save_fix_summary.md  save_metadata_analysis.md
runner/: evaluation.py  preprocess_dataset.py  run_augmented_data_retrieval.py  run_value_retrieval.py
script/: analyze_schema_selection_errors.py  calculate_ex_accuracy.py  compare_schemas.py  compare_schemas_detailed.py  compare_tables_diff.py  make_vector_db.sh  schema_comparison_summary.py  sql_query.py  start_vllm.sh  view_ambiguous_pairs.py  view_metadata_guidance.py  view_sub_dev_pkl.py
(+160 files in other folders)
