[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beta-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "chromadb>=1.0.21",
    "gdown>=5.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "modelscope>=1.29.2",
    "openai>=1.107.2",
    "pandas>=2.3.2",
    "pydantic>=2.0.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
    "nltk>=3.8.0",
    "faiss-cpu>=1.7.4",
    "rank-bm25>=0.2.2",
    "sqlglot>=28.0.0",
    "pyarrow>=14.0.0",
    "sql_metadata>=2.18.0",
    "datasketch>=1.6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["caf*"]
